force-app/main/default/objects/Badge__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image_URL__c</label>
    <type>Url</type>
</CustomField>