force-app/main/default/objects/Badge__c/fields/Proficiency_Level_Required__c.field-meta.xml
<CustomField>
    <fullName>Proficiency_Level_Required__c</fullName>
    <label>Proficiency_Level_Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>